contact page styled

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -33,6 +33,16 @@
       position: relative;
     }
 
+    &--contact {
+      height: 100vh;
+      background-image: 
+      url(../img/contact-bg.png);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;  
+      background-position: center;
+      position: relative;
+    }
+
 
     &__logo-box{
       position: absolute;
