--- a/src/sass/pages/_login.scss
+++ b/src/sass/pages/_login.scss
@@ -44,8 +44,8 @@
         right: 2.2rem;
         height: 5.2rem;
         width: 32.3rem;
-        border-radius: 24px;
-        border: solid 1.5px #004d61;
+        border-radius: 2.4rem;
+        border: solid .15rem #004d61;
     }
     &__input {
         position: absolute;
@@ -53,7 +53,7 @@
         border-top: transparent !important;
         border-left: transparent !important;
         border-right: transparent !important;
-        border-bottom: 4px transparent !important;
+        border-bottom: .4rem transparent !important;
         font-size: 2rem;
         font-weight: 400;
         width: 27rem;
@@ -89,7 +89,7 @@
         text-transform: none;
 
         & a {
-            color: #3da0a5;
+            color: $color-tertiary-light;
             text-decoration: none;
         }
     }
