--- a/src/sass/components/_burger-menu.scss
+++ b/src/sass/components/_burger-menu.scss
@@ -43,6 +43,7 @@
     /* Wrapper for item list */
     &-item-list {
       color: #f59c17;
+      z-index: 10;
     }
 
     /* Styling of overlay */
