--- a/src/sass/components/_compositions.scss
+++ b/src/sass/components/_compositions.scss
@@ -2,13 +2,12 @@
     position: relative;
     top: 7rem;
     &__photo {
-        width: 55%;
+        width: 60%;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
-        border-radius: 2px;
+        border-radius: 1.9rem;
         position: absolute;
         z-index: 10;
         transition: all .2s;
-        outline-offset: 2rem;
 
         @include respond(tab-port) {
             float: left;
