styling news page

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -14,7 +14,7 @@
   color: $color-grey-dark-3;
 
   &__para {
-    font-size: $default-font-size;
+    font-size: 2rem;
     line-height: 3.3rem;
     & ul {
       margin-left: 4rem;
