--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Roboto Slab', serif;
     font-weight: 400;
    /* font-size: 16px;*/
     line-height: 1.7;
@@ -16,9 +16,10 @@ body {
     
     &--main{
       display: block;
-      font-size: 6rem;
+      font-size: 7rem; 
+      font-family: 'Dancing Script', cursive;
       font-weight: 400;
-      letter-spacing: 3.5rem;
+      letter-spacing: 3rem;
       padding-bottom: 2rem;
     
       animation-name: moveInLeft;
@@ -29,7 +30,7 @@ body {
     
     &--sub{
       display: block;
-      font-size: 2.5rem;
+      font-size: 2.3rem;
       font-weight: 700;
       letter-spacing: 1.75rem;
       animation: moveInRight 1s ease-out;
@@ -67,7 +68,7 @@ body {
 }
 
 .heading-tertiary {
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   font-weight: 700;
   text-transform: uppercase;
 
