--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -6,6 +6,7 @@
       text-decoration: none;
       padding: 1.5rem 4rem;
       display: inline-block;
+      font-family: inherit;
       border-radius: 10rem;
       transition: all .2s;
       position: relative;
