--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -43,6 +43,16 @@
       position: relative;
     }
 
+    &--news {
+      height: 100vh;
+      background-image: 
+      url(../img/news-bg.png);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;  
+      background-position: center;
+      position: relative;
+    }
+
 
     &__logo-box{
       position: absolute;
