--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -1,11 +1,12 @@
 .navigation {
-
+    list-style-type: none;
     &__link {
         &:link,
         &:visited {
             display: inline-block;
-            line-height: 4rem;
-            font-size: 2.7rem;
+            line-height: 3rem;
+            font-size: 2.5rem;
+            font-family: 'Noto Serif', serif;
             font-weight: 400;
             padding: 1rem 2rem;
             color: $color-white;
@@ -21,5 +22,24 @@
         }
     }
 
+    &__user {
+        color: $color-secondary-dark;
+        font-size: 2.5rem;
+        font-family: 'Lobster', cursive;
+        pointer-events: none;
+        cursor: default;
+
+        &--attribute {
+           &:visited,
+           &:link {
+               color: $color-primary;
+               margin-left: 2rem;
+           }
+        }
+    }
+
+    &__welcome {
+        margin-bottom: 1.5rem;
+    }
 
 }
