profile && news styled && contact fixed && gallery need to be styled

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -53,6 +53,16 @@
       position: relative;
     }
 
+    &--profile {
+      height: 100vh;
+      background-image: 
+      url(../img/profile-bg.png);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;  
+      background-position: center;
+      position: relative;
+    }
+
 
     &__logo-box{
       position: absolute;
