--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -65,13 +65,13 @@
       animation-fill-mode: backwards;
     }
     
-    &__review {
+    &__action {
       position: absolute;
       height: 3.6rem;
-      width: 10rem;
+      width: 12rem;
       border-radius: 1.6rem;
       text-align: left;
-      right: 7rem;
+      right: 3rem;
       bottom: 2.2rem;
       padding-left: 1rem;
       font-size: $default-font-size;
@@ -82,11 +82,33 @@
         animation: jelly 0.5s;
       }
 
+      &--post {
+        position: absolute;
+        font-size: 3rem;
+        bottom: 6rem;
+        right: 5rem;
+        width: 13rem;
+        height: 5rem;
+        border-radius: 4.8rem;
+        box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+        background-color: #efefef;
+      }
+
       &--paw {
         position: absolute;
         width: 2.2rem;
         height: 1.9rem;
-        margin-left: .5rem;
+        right: 1rem;
+        top: .7rem;
+        
+
+        &--post {
+          position: absolute;
+          width: 3rem;
+          height: 3rem;
+          right: 1rem;
+          top: 1rem;
+        }
       }
     }
 }
