--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -1,12 +1,10 @@
 .info {
     &--shop {
         background-color: #fff;
-        &:not(:last-child){
-            margin-bottom: 7rem;
-        }
+        margin-bottom: 7rem;
         position: relative;
         height: 20rem;
-        width: auto;
+        min-width: 80rem;
         color: $color-black;
         border-radius: 1rem;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
@@ -14,12 +12,10 @@
 
     &--service {
         background-color: #fff;
-        &:not(:last-child){
-            margin-bottom: 7rem;
-        }
+        margin-bottom: 7rem;
         position: relative;
         height: 20rem;
-        width: auto;
+        min-width: 80rem;
         color: $color-black;
         border-radius: 1rem;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
@@ -28,17 +24,28 @@
     &__text-container {
         position: relative;
         left: 25rem;
-        top: 6.5rem;
+        top: 5rem;
+        height: 10rem;
+        max-width: 50%;
         bottom: 6.5rem;
         text-align: left;
+        text-decoration: none !important;
+        
 
         &--title {
-            font-size: 3rem;
+            position: relative;
+            font-size: 2.8rem;
+            color: $color-secondary-dark;
+        
         }
 
         &--address {
+            position: absolute;
+            display: inline-block;
             font-size: 2rem;
             line-height: 2.4rem;
+            word-wrap: break-word;
+            white-space: normal;
         }
     }
 
