all pages styled, redux still needed for async states  management

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -63,6 +63,16 @@
       position: relative;
     }
 
+    &--gallery {
+      height: 100vh;
+      background-image: 
+      url(../img/gallery-bg.png);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;  
+      background-position: center;
+      position: relative;
+    }
+
 
     &__logo-box{
       position: absolute;
