--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -51,6 +51,7 @@
                 top: 2.5rem;
                 width: 58.8rem;
                 height: 35.6rem;
+                resize: none;
                 background: transparent;
                 border-top: transparent !important;
                 border-left: transparent !important;
