--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -17,8 +17,10 @@
         position: relative;
         text-align: center;
         color: $color-white;
+
         &-img {
-            height: 70.5rem;
+            position: relative;
+            height: 100vh;
             width: 100%;
         }
     }
