--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -14,7 +14,7 @@
     &--shop {
       height: 100vh;
       background-image: 
-      url(../img/shop-bg.png);
+      url('../img/shop-bg.png');
       background-repeat: no-repeat;
       background-size: 100% 100%; 
       background-position: center;
