--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -43,7 +43,7 @@
         &--address {
             position: absolute;
             display: inline-block;
-            font-size: 2rem;
+            font-size: 1vw;
             line-height: 2.4rem;
             word-wrap: break-word;
             bottom: 15%;
