--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,8 @@
 .footer{
-        position: relative;
-        bottom: 0;
+        position: absolute;
+        clear: both;
         height: 27rem;
+        bottom: -27rem;
         background-color: #414141;
         box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
         box-sizing: border-box;
