--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -6,7 +6,7 @@
             display: inline-block;
             line-height: 3rem;
             font-size: 2.5rem;
-            font-family: 'Noto Serif', serif;
+            font-family: 'Roboto', sans-serif;
             font-weight: 400;
             padding: 1rem 2rem;
             color: $color-white;
