--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -23,12 +23,9 @@
 }
 
 .bg {
-  min-height: 100%;
-  min-width: 102.4rem;
-	
   /* Set up proportionate scaling */
-  width: 100%;
-  height: 75%;
+  width: 100vw;
+  height: 100vh;
 
   /* Set up positioning */
   position: fixed;
