--- a/src/sass/layout/_page.scss
+++ b/src/sass/layout/_page.scss
@@ -1,43 +1,33 @@
-.page__container {
-    position: relative;
-  }
-  .page {
+.page {
     height: 100%;
     overflow: hidden;
     position: relative;
     top: 0;
     width: 100%;
-    transition: transform 1s ease-in-out, box-shadow 1s ease-in-out;
+    transition: all 1.5s ease-in-out;
+
+    //WHOLE APP CONTAINER
+    &__container {
+      position: relative;
+    }
+
+    &-enter {
+      opacity: 0.01;
+
+      &-active {
+        opacity: 1;
+        transform: opacity 1.5s ease-in-out;
+      }
+    }
+
+    &-leave {
+      opacity: 1;
+
+      &-active {
+        opacity: 0.01;
+        transition: opacity 1.5s ease-in-out;
+      }
+    }
   }
   
-  .page-enter {
-    transform: translate(-100%, 0);
-  }
-  
-  .page-enter-active {
-    transform: translate(0, 0);
-  }
-  
-  .page-exit {
-    box-shadow: 0 0 5em 0 rgba(0, 0, 0, .5) inset;
-    transform: translate(-100%, 0);
-  }
-  
-  .page--prev.page-enter {
-    transform: translate(100%, 0);
-  }
-  
-  .page--prev.page-enter-active {
-    transform: translate(0, 0);
-  }
-  
-  .page--prev.page-exit {
-    transform: translate(100%, 0);
-  }
-  
-  .page-exit .page__inner {
-    opacity: 0;
-    transform: scale(0.9);
-    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
-  }
     
