--- a/src/sass/components/_info.scss
+++ b/src/sass/components/_info.scss
@@ -71,7 +71,7 @@
             height: 100%;
             left: 50%;
             top: 50%;
-            object-fit: containe;
+            object-fit: contain;
             -webkit-transform: translate(-50%, -50%);
             -moz-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
