--- a/src/sass/pages/_news.scss
+++ b/src/sass/pages/_news.scss
@@ -1,284 +1,436 @@
 .news {
-    &__post-container {
+  &__post-container {
+    position: relative;
+    margin: 10rem 20% 25rem 20%;
+    height: 47.2rem;
+    min-width: 50vw;
+    border-radius: 2.3rem;
+    box-shadow: 0 0.3rem 0.6rem 0 rgba(0, 0, 0, 0.16);
+    background-color: $color-white;
+
+    &--header {
+      position: relative;
+      top: 0;
+      height: 8rem;
+      box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+      background-color: #fbfbfb;
+      border-radius: 2.3rem 2.3rem 0 0;
+
+      &--paragraph {
+        position: absolute;
+        padding: 2.3rem 5rem;
+        max-width: 50%;
+        height: 3.4rem;
+        font-size: 1.5vw;
+        font-weight: bold;
+        text-align: left;
+        color: #2a2a2a;
+      }
+    }
+
+    &--body {
+      position: relative;
+      width: auto;
+      min-height: 36rem;
+
+      &--avatar-sprout {
+        position: absolute;
+        left: 2vw;
+        height: 72px;
+        width: 72px;
+        border-radius: 50%;
+        overflow: hidden;
+      }
+
+      &--avatar-img {
         position: relative;
-        margin: 10rem 20%;
-        height: 47.2rem;
         min-width: 50%;
-        border-radius: 2.3rem;
-        box-shadow: 0 .3rem .6rem 0 rgba(0, 0, 0, 0.16);
-        background-color: $color-white;
+        min-height: 50%;
+        width: 100%;
+        height: 100%;
+        left: 50%;
+        top: 50%;
+        object-fit: contain;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+      }
 
-        &--header {
-            position: relative;
-            top: 0;
-            height: 8rem;
-            box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-            background-color: #fbfbfb;
-            border-radius: 2.3rem 2.3rem 0 0;
+      &--sprout {
+        position: relative;
+        margin-top: 4rem;
+        right: 3%;
+        padding-left: 17%;
+        width: auto;
+        min-height: 20rem;
+      }
 
-            &--paragraph {
-                position: absolute;
-                padding: 2.3rem 5rem;
-                max-width: 50%;
-                height: 3.4rem;
-                font-size: 1.5vw;
-                font-weight: bold;
-                text-align: left;
-                color: #2a2a2a;
-            }
-        }
+      &--content {
+        position: absolute;
+        font-size: 1.2vw;
+        font-family: inherit;
+        height: 20.2rem;
+        min-width: 80%;
+        resize: none;
+        line-height: 3.5vh;
+        background: transparent;
+        border-top: transparent !important;
+        border-left: transparent !important;
+        border-right: transparent !important;
+        border-bottom: 0.4rem transparent !important;
+      }
+    }
+  }
 
-        &--body {
-            position: relative;
-            width: auto;
-            min-height: 36rem;
-
-            &--avatar-sprout {
-                position: absolute;
-                left: 2vw;
-                height: 4vw;
-                width: 4vw;
-            }x
-
-            &--avatar-img {
-
-            }
-
-            &--sprout {
-                position: relative;
-                margin-top: 4rem;
-                right: 3%;
-                padding-left: 17%;
-                width: auto;
-                min-height: 20rem;
-                
-            }
-
-            &--content {
-                position: absolute;
-                font-size: 1.2vw;
-                font-family: inherit;
-                height: 20.2rem;
-                min-width: 80%;
-                resize: none;
-                line-height: 3.5vh;
-                background: transparent;
-                border-top: transparent !important;
-                border-left: transparent !important;
-                border-right: transparent !important;
-                border-bottom: .4rem transparent !important;
-            }
-        }
+  &__display {
+    &-rounder {
+      padding: 20px 20px 0;
     }
 
-    &__display {
-
-        &--container{
-            position: relative;
-            background-color: green;
-            height: auto;
-            min-width: 50%;
-            margin: 10rem 34.7rem;
-            border-radius: 1.6rem;
-            box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-            background-color: $color-white;
-        }
-
-        &--avatar {
-            position: absolute;
-            top: 2.8rem;
-            left: 4.23rem;
-            height: 8rem;
-            width: 8rem;
-
-            &-small {
-                top: 9%;
-                left: 2%;
-                height: 3vw;
-                width: 3vw;
-            }
-        }
-
-        &--owner {
-            position: absolute;
-            top: 3.6rem;
-            left: 15.2rem;
-            font-size: 2.4rem;
-            font-weight: bold;
-            color: #2e7ba7;
-        }
-
-        &--dateTime {
-            position: absolute;
-            top: 7.6rem;
-            left: 15.2rem;
-            font-size: $default-font-size;
-            line-height: 1.19;
-        }
-
-        &--content {
-            position: relative;
-            min-height: 30rem;
-            max-width: 90%;
-            top: 13.6rem;
-            left: 4.23rem;
-            font-size: 2rem;
-            line-height: 1.2;
-            text-align: left;
-            color: #2a2a2a;
-        }
-
-        &--posted-image {
-            position: relative;
-            margin-top: 4rem;
-            min-width: 100%;
-            width: 38.6rem;
-            max-height: 80rem;
-        }
-
-        &--like-comment-container {
-            position: relative;
-            height: 8rem;
-        }
-
-        &--like-count {
-            position: absolute;
-            top: 1.6rem;
-            left: 4rem;
-        }
-
-        &--counter {
-            position: relative;
-        }
-
-        &--counterInNumLeft {
-            position: absolute;
-            top: 1.2rem;
-            left: 10.03rem;
-            font-size: 2.8rem;
-        }
-
-        
-        &--counterInNumRight {
-            position: absolute;
-            top: 1.2rem;
-            right: 10.03rem;
-            font-size: 2.8rem;
-        }
-
-        &--comment-count {
-            position: absolute;
-            top: 1.6rem;
-            right: 4rem;      
-        }
-
-        &--like-comment-button {
-            position: relative;
-            height: 10rem;
-        }
-
-        &--like-button {
-            position: absolute;
-            top: 1.9rem;
-            left: 25%;
-            border: none;
-            padding: 0;
-            background: none;
-            cursor: pointer;
-        }
-
-        &--comment-button {
-            position: absolute;
-            top: 1.9rem;
-            right: 25%;
-            border: none;
-            padding: 0;
-            background: none;
-            cursor: pointer;
-        }
-
-        &--comment-sprout {
-            position: relative;
-            height: auto;
-            max-height: 30rem;
-            margin-bottom: 4rem;
-            overflow: hidden;
-        }
-
-        &--comment-content {
-            position: relative;
-            height: auto;
-            overflow-x: hidden;
-            overflow-y: scroll;
-            min-height: 7rem;
-            width: 45vw;
-            margin-bottom: 3rem;
-            background: repeat-x scroll center top transparent;
-            left: 7vw;
-            border-radius: 2rem;
-            background-color: #f3f3f3;
-        }
-
-        &--userName {
-            position: absolute;
-            top: 30%;
-            left: 1%;
-            font-size: 1vw;
-            font-weight: bold;
-            text-decoration: none;
-            color: #2e7ba7;
-            cursor: pointer;
-        }
-
-        &--comment-text {
-            position: absolute;
-            font-size: 1vw;
-            left: 13vw;
-            word-wrap: break-word
-        }
-
-        &--comment-action-box {
-            position: relative;
-            height: 8rem;
-        }
-
-        &--comment-input-sprout {
-            position: relative;
-            height: 5rem;
-            top: .5rem;
-            left: 16%;
-            max-width: 70%;
-            border-radius: 28px;
-            border: solid 1px rgba(112, 112, 112, 0.3);
-            background-color: #f3f3f3;
-        }
-
-        &--comment-input-box {
-            position: absolute;
-            width: 90%;
-            top: 30%;
-            left: 3%;
-            font-size: 1.8rem;
-            color: #2a2a2a;
-            background: transparent;
-            border-top: transparent !important;
-            border-left: transparent !important;
-            border-right: transparent !important;
-            border-bottom: .4rem transparent !important;
-        }
-
-        &--comment-action-button {
-            position: absolute;
-            right: 2%;
-            top: 7%;
-            height: 7vh;
-            width: 5vw;
-            font-size: 1vw;
-            border-radius: 3rem;
-            box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-            background-color: $color-grey-light-2;
-            color: $color-tertiary-light;
-            cursor: pointer;
-        }
+    &-topSpace {
+      height: 0;
+      left: 0;
+      overflow: visible;
+      position: absolute;
+      right: 0;
+      margin-top: -20px;
     }
+
+    &-owner_wrapper {
+      overflow: hidden;
+      zoom: 1;
+    }
+
+    &-seperator {
+        background-color: #fff;
+        border-top: 1px solid #dadde1;
+    }
+
+    &--container {
+      position: relative;
+      height: auto;
+      min-width: 40vw;
+      margin: 10rem 30%;
+      word-wrap: break-word;
+      border-radius: 1.6rem;
+      box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+      background-color: $color-white;
+    }
+
+    &--header {
+      margin-bottom: -6px;
+      zoom: 1;
+    }
+
+    &--avatar {
+      display: block;
+      padding-bottom: 3px;
+      float: left;
+      margin-right: 20px;
+      height: 4vw;
+      width: 4vw;
+
+      &-small {
+        top: 9%;
+        left: 2%;
+        height: 3vw;
+        width: 3vw;
+      }
+    }
+
+    &--owner {
+      display: block;
+      top: 2rem;
+      left: 12rem;
+      font-size: 1.2vw;
+      font-weight: bold;
+      color: #2e7ba7;
+    }
+
+    &--dateTime {
+      top: 7.6rem;
+      left: 14.2rem;
+      font-size: $default-font-size;
+      line-height: 1.19;
+    }
+
+    &--content {
+      font-family: Roboto;
+      margin-top: 4rem;
+      font-size: 1.2vw;
+      font-weight: normal;
+      line-height: 3rem;
+
+      & p {
+        display: inline;
+        margin-bottom: 0;
+        margin: 1rem 0;
+      }
+    }
+
+    &--posted-image {
+      position: relative;
+      margin-top: 4rem;
+      min-width: 100%;
+      width: 38.6rem;
+      max-height: 80rem;
+
+      &_sprout {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        height: 750px;
+      }
+    }
+
+    &--like-comment-container {
+      position: relative;
+    }
+
+    &--like-comment-smaller_sprout {
+      align-items: center;
+      border-bottom: 1px solid #dadde1;
+      color: #606770;
+      display: flex;
+      line-height: 20px;
+      margin: 10px 12px 0 12px;
+      padding: 0 0 10px 0;
+    }
+
+    &--like-count {
+      align-items: center;
+      display: flex;
+    }
+
+    &--counter_block {
+      display: block;
+      line-height: 16px;
+      max-height: 16px;
+      overflow: hidden;
+    }
+
+    &--like_counter {
+      align-items: center;
+      display: flex;
+      flex-grow: 1;
+      overflow: hidden;
+
+      &_inNum {
+        float: left;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100px;
+        font-size: 1.2vw;
+      }
+    }
+
+    &--empty_div {
+      flex-grow: 0;
+      flex-shrink: 0;
+      width: 7px;
+    }
+
+    &--comment_counter {
+      display: flex;
+      flex-shrink: 0;
+    }
+
+    &--comment_count_inNum {
+      float: left;
+      margin-top: 1rem;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      font-size: 1.4vw;
+    }
+
+    &--like-comment-button {
+      display: flex;
+      margin: 0 12px;
+      min-height: 32px;
+      padding: 4px 0;
+    }
+
+    &-button_smaller_wrapper {
+      display: flex;
+      flex-direction: row;
+      flex-grow: 1;
+      order: 1;
+    }
+
+    &-button_container {
+      align-items: center;
+      display: flex;
+      flex: 1 0;
+      justify-content: center;
+
+      &::before {
+        content: "\20\a0\20";
+      }
+    }
+
+    &-button--left {
+      &_wrapper {
+        display: block;
+        position: relative;
+        width: 100%;
+      }
+    }
+
+    &--like-button {
+      align-items: center;
+      color: #606770;
+      display: flex;
+      flex: 1 0;
+      font-weight: 600;
+      height: 32px;
+      justify-content: center;
+      line-height: 14px;
+      padding: 0 2px;
+      position: relative;
+      text-decoration: none;
+      transition: 400ms cubic-bezier(0.08, 0.52, 0.52, 1) transform;
+      z-index: 6;
+      width: 100%;
+
+      &::after {
+        bottom: -5px;
+        content: "";
+        display: block;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: -5px;
+      }
+
+      &_icon {
+        background-size: auto;
+        background-repeat: no-repeat;
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        background-position: 0 -444px;
+      }
+    }
+
+    &--comment-button {
+      align-items: center;
+      color: #606770;
+      display: flex;
+      flex: 1 0;
+      font-weight: 600;
+      height: 32px;
+      justify-content: center;
+      line-height: 14px;
+      padding: 0 2px;
+      position: relative;
+      text-decoration: none;
+      transition: 400ms cubic-bezier(0.08, 0.52, 0.52, 1) transform;
+
+      &::before {
+        content: "";
+        display: inline-block;
+        height: 18px;
+        margin: 0 6px -3px 0;
+        min-width: 18px;
+        position: relative;
+        top: -2px;
+        width: 18px;
+      }
+
+      &::after {
+        bottom: -5px;
+        content: "";
+        display: block;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: -5px;
+      }
+    }
+
+    &--comment-sprout {
+      position: relative;
+      height: auto;
+      max-height: 30rem;
+      margin-bottom: 4rem;
+      overflow: hidden;
+    }
+
+    &--comment-content {
+      position: relative;
+      height: auto;
+      overflow-x: hidden;
+      overflow-y: scroll;
+      min-height: 7rem;
+      width: 45vw;
+      margin-bottom: 3rem;
+      background: repeat-x scroll center top transparent;
+      left: 7vw;
+      border-radius: 2rem;
+      background-color: #f3f3f3;
+    }
+
+    &--userName {
+      position: absolute;
+      top: 30%;
+      left: 1%;
+      font-size: 1vw;
+      font-weight: bold;
+      text-decoration: none;
+      color: #2e7ba7;
+      cursor: pointer;
+    }
+
+    &--comment-text {
+      position: absolute;
+      font-size: 1vw;
+      left: 13vw;
+      word-wrap: break-word;
+    }
+
+    &--comment-action-box {
+      position: relative;
+      height: 8rem;
+    }
+
+    &--comment-input-sprout {
+      position: relative;
+      height: 5rem;
+      top: 0.5rem;
+      left: 16%;
+      max-width: 70%;
+      border-radius: 28px;
+      border: solid 1px rgba(112, 112, 112, 0.3);
+      background-color: #f3f3f3;
+    }
+
+    &--comment-input-box {
+      position: absolute;
+      width: 90%;
+      top: 30%;
+      left: 3%;
+      font-size: 1.8rem;
+      color: #2a2a2a;
+      background: transparent;
+      border-top: transparent !important;
+      border-left: transparent !important;
+      border-right: transparent !important;
+      border-bottom: 0.4rem transparent !important;
+    }
+
+    &--comment-action-button {
+      position: absolute;
+      right: 2%;
+      top: 7%;
+      height: 7vh;
+      width: 5vw;
+      font-size: 1vw;
+      border-radius: 3rem;
+      box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+      background-color: $color-grey-light-2;
+      color: $color-tertiary-light;
+      cursor: pointer;
+    }
+  }
 }
