--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -85,7 +85,7 @@
       &--post {
         position: absolute;
         font-size: 1.5vw;
-        bottom: 5vh;
+        bottom: 7%;
         right: 5rem;
         width: 13.5rem;
         height: 5rem;
