--- a/src/sass/pages/_login.scss
+++ b/src/sass/pages/_login.scss
@@ -118,4 +118,16 @@
             opacity: 1;
         }
     }
+
+    &__forget-password {
+        position: relative;
+        text-decoration: none;
+        top: 1vh;
+        left: .7vw;
+
+        &:visited {
+            color: $color-secondary-dark;
+        }
+    }
+
 }
